fixtures/envoy/envoy.yaml
# Ports are substituted by scripts/envoy-test.cjs; all endpoints are loopback.
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: __ADMIN_PORT__ }
static_resources:
  listeners:
    - name: grpc_web_loopback
      address:
        socket_address: { address: 127.0.0.1, port_value: __ENVOY_PORT__ }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: grpc_web_interop
                codec_type: AUTO
                stream_idle_timeout: 0s
                route_config:
                  name: loopback_route
                  virtual_hosts:
                    - name: native_grpc
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: native_grpc, timeout: 0s }
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: native_grpc
      connect_timeout: 1s
      type: STATIC
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: native_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: __NATIVE_PORT__ }
